--- a/lisdin-ui/package.json
+++ b/lisdin-ui/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^2.17.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
