refactored code for efficiency and to utilize typescript features

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["./types"]
+    "typeRoots": ["./types"],
+    "rootDirs": ["./src", "./types"]
   },
-  "include": ["src", "./types"]
+  "include": ["src", "./types"],
+  "exclude": ["**/node_modules/**"]
 }
